# cassowary

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  deploy.yml
client/: Cargo.toml
client/src/: drawing.rs  main.rs  scene.rs  widget.rs  windows.rs
client/src/imgs/: turn_btn.aseprite
client/src/scene/: game.rs  lobby.rs
client/src/widget/: context_menu.rs
client/src/widget/context_menu/: c_overlay.rs
client/src/windows/: game.rs  menu.rs
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
