[package]
name = "cassowary-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
http = "1.3.1"
macroquad = "0.4.14"
tokio = { version = "1.45.1", features = ["rt", "sync", "time", "macros"] }
tokio-websockets = { version = "0.11.4", features = ["client", "native-tls", "rand", "sha1_smol"] }
shared = { path="../shared" }
serde = { workspace = true }
serde_json = {workspace = true}
egui-macroquad = "0.17.3"
egui_extras = { version = "0.31.1", features = ["image", "file", "http"] }
image = { version = "0.25.6", features = ["png"] }
shrek-deck = "0.1.1"

