[package]
name = "cassowary-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
http = "1.3.1"
tokio = { version = "1.45.1", features = ["rt", "sync", "time", "macros"] }
tokio-websockets = { version = "0.11.4", features = ["client", "native-tls", "rand", "sha1_smol"] }
shared = { path="../shared" }
serde = { workspace = true }
serde_json = {workspace = true}
image = { version = "0.25.6", features = ["png"] }
shrek-deck = "0.1.1"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["image", "tokio"] }
iced-drag = { git = "https://github.com/lilith-in-starlight/iced-drag.git", branch = "master" }
reqwest = { version = "0.12.18", features = ["json"] }

