[package]
name = "cassowary-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
renet = "1.0.0"
tokio = { version = "1.45.1", features = ["rt", "sync", "macros", "rt-multi-thread", "net"] }
tokio-websockets = { version = "0.11.4", features = ["server", "sha1_smol"] }
serde = { workspace = true }
shared = { path="../shared" }
serde_json.workspace = true
rand = "0.9.1"
